--- a/src/patternfly/components/OverflowMenu/overflow-menu.hbs
+++ b/src/patternfly/components/OverflowMenu/overflow-menu.hbs
@@ -1,11 +1,17 @@
-{{#> wrapper overflow-menu-button--aria-expanded="true"}}
+  {{!-- {{ternary overflow-menu--id '\id="\{{overflow-menu--id}}\"' ''}}
+  {{ternary overflow-menu--attribute overflow-menu--attribute ''}}> --}}
 <div class="{{pfv}}overflow-menu{{#if overflow-menu--modifier}} {{overflow-menu--modifier}}{{/if}}"
-  {{#if overflow-menu--attribute}}
-    {{{overflow-menu--attribute}}}
-  {{/if}}
   {{#if overflow-menu--id}}
     id="{{overflow-menu--id}}"
+  {{/if}}
+  {{#if overflow-menu--attribute}}
+    {{{overflow-menu--attribute}}}
   {{/if}}>
-  {{> @partial-block}}
+  {{#if menu--IsCondensed}}
+    {{#> overflow-menu-control menu-toggle--IsExpanded=true menu-toggle--aria-label='Generic options'}}
+      {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Menu toggle'}}
+    {{/overflow-menu-control}}
+  {{else if @partial-block}}
+    {{> @partial-block}}
+  {{/if}}
 </div>
-{{/wrapper}}
