--- a/src/patternfly/components/Table/TableCells/table-cell-overflow-menu.hbs
+++ b/src/patternfly/components/Table/TableCells/table-cell-overflow-menu.hbs
@@ -3,8 +3,12 @@
 {{!-- TODO: automate attribution --}}
 
 {{#> table-td table-td--IsOverflowMenu=true}}
-  {{#> overflow-menu overflow-menu--id=(concat table--id '-overflow-menu-' table-tr--index) dropdown-menu--modifier="pf-m-align-right"}}
-    {{#if table--overflow-menu--IsExpanded}}
+  {{#> overflow-menu overflow-menu--id=(dasherize table--id 'overflow-menu' table-tr--index)}}
+    {{#if table-cell-overflow-menu--IsCondensed}}
+      {{#> overflow-menu-control menu-toggle--aria-label="Actions"}}
+        {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--aria-label='Menu toggle' menu-toggle--IsPlain--id=(dasherize overflow-menu--id 'toggle')}}
+      {{/overflow-menu-control}}
+    {{else}}
       {{#> overflow-menu-content}}
         {{#> overflow-menu-group overflow-menu-group--modifier="pf-m-button-group"}}
           {{#> overflow-menu-item}}
@@ -19,15 +23,6 @@
           {{/overflow-menu-item}}
         {{/overflow-menu-group}}
       {{/overflow-menu-content}}
-    {{else}}
-      {{#> overflow-menu-control dropdown--IsExpanded=table--overflow-menu--dropdown--IsExpanded overflow-menu-button--aria-label="Generic options"}}
-        {{#> overflow-menu-dropdown-item}}
-          Start
-        {{/overflow-menu-dropdown-item}}
-        {{#> overflow-menu-dropdown-item}}
-          Stop
-        {{/overflow-menu-dropdown-item}}
-      {{/overflow-menu-control}}
     {{/if}}
   {{/overflow-menu}}
 {{/table-td}}
