--- a/src/patternfly/components/Toolbar/templates/toolbar--overflow-menu.hbs
+++ b/src/patternfly/components/Toolbar/templates/toolbar--overflow-menu.hbs
@@ -37,10 +37,9 @@
         {{/overflow-menu-item}}
       {{/overflow-menu-group}}
     {{/overflow-menu-content}}
-    {{#> overflow-menu-control dropdown--IsExpanded="true" overflow-menu-button--aria-label="Dropdown with additional options"}}
-      {{#> overflow-menu-dropdown-item}}
-        Action 7
-      {{/overflow-menu-dropdown-item}}
+
+    {{#> overflow-menu-control overflow-menu-button--aria-label="Menu with additional options"}}
+      {{> menu-toggle menu-toggle--HasKebab=true menu-toggle--IsPlain=true menu-toggle--id=(dasherize toolbar--id 'toggle')}}
     {{/overflow-menu-control}}
   {{/overflow-menu}}
 {{/toolbar-item}}
