--- a/src/patternfly/components/Toolbar/toolbar-icon-button-group-example.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-icon-button-group-example.hbs
@@ -1,33 +1,13 @@
 {{#if toolbar-icon-button-group-example--IsOverflowMenu}}
   {{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-overflow-menu ' toolbar-icon-button-group-example)}}
-    {{#> overflow-menu overflow-menu-button--aria-label="Expand icon button overflow menu" overflow-menu--id=(concat toolbar--id '-icon-button-overflow-menu') dropdown--IsExpanded=toolbar-overflow-menu-example--IsExpanded overflow-menu--modifier=toolbar-demo-overflow-menu--modifier overflow-menu--attribute=toolbar-demo-overflow-menu--attribute}}
+    {{#>overflow-menu
+        overflow-menu-button--aria-label="Expand icon button overflow menu"
+        overflow-menu--id=(dasherize toolbar--id 'icon-button-overflow-menu')
+        overflow-menu--modifier=toolbar-demo-overflow-menu--modifier
+        overflow-menu--attribute=toolbar-demo-overflow-menu--attribute
+      }}
+
       {{#if toolbar-icon-button-group-example--control}}
-        {{#if toolbar-overflow-menu-example--IsExpanded}}
-          {{#> overflow-menu-control overflow-menu-button--aria-label="Overflow menu" overflow-menu-button--aria-expanded="true" dropdown--icon="fa-toolbox"}}
-            {{#> overflow-menu-dropdown-item}}
-              Edit
-            {{/overflow-menu-dropdown-item}}
-            {{#> overflow-menu-dropdown-item}}
-              Clone
-            {{/overflow-menu-dropdown-item}}
-            {{#> overflow-menu-dropdown-item}}
-              Sync
-            {{/overflow-menu-dropdown-item}}
-          {{/overflow-menu-control}}
-        {{else}}
-          {{#> overflow-menu-control overflow-menu-button--aria-label="Overflow menu" overflow-menu-button--aria-expanded="false" dropdown--icon="fa-toolbox"}}
-            {{#> overflow-menu-dropdown-item}}
-              Edit
-            {{/overflow-menu-dropdown-item}}
-            {{#> overflow-menu-dropdown-item}}
-              Clone
-            {{/overflow-menu-dropdown-item}}
-            {{#> overflow-menu-dropdown-item}}
-              Sync
-            {{/overflow-menu-dropdown-item}}
-          {{/overflow-menu-control}}
-        {{/if}}
-      {{else}}
         {{#> overflow-menu-content}}
           {{#> overflow-menu-group overflow-menu-group--modifier="pf-m-icon-button-group"}}
             {{#> overflow-menu-item}}
