--- a/src/patternfly/components/Toolbar/toolbar-overflow-menu-example.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-overflow-menu-example.hbs
@@ -1,6 +1,11 @@
 {{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-overflow-menu ' toolbar-overflow-menu-example-toolbar-item--modifier)}}
-  {{#> overflow-menu overflow-menu-button--aria-label="Expand button group overflow menu" overflow-menu--id=(concat toolbar--id '-overflow-menu') dropdown--IsExpanded=toolbar-overflow-menu-example--IsExpanded overflow-menu--modifier=toolbar-demo-overflow-menu--modifier overflow-menu--attribute=toolbar-demo-overflow-menu--attribute}}
-    
+  {{#>overflow-menu
+      overflow-menu-button--aria-label="Expand button group overflow menu"
+      overflow-menu--id=(concat toolbar--id '-overflow-menu')
+      overflow-menu--modifier=toolbar-demo-overflow-menu--modifier
+      overflow-menu--attribute=toolbar-demo-overflow-menu--attribute
+    }}
+
     {{#if toolbar-overflow-menu-example--content}}
       {{#> overflow-menu-content}}
         {{#> overflow-menu-group overflow-menu-group--modifier="pf-m-button-group"}}
@@ -17,7 +22,7 @@
         {{/overflow-menu-group}}
       {{/overflow-menu-content}}
     {{/if}}
-  
+
     {{#if toolbar-overflow-menu-example--persistent}}
       {{#> overflow-menu-content}}
         {{#> overflow-menu-group overflow-menu-group--modifier="pf-m-button-group"}}
@@ -29,39 +34,11 @@
         {{/overflow-menu-group}}
       {{/overflow-menu-content}}
     {{/if}}
-    
-    {{#if dropdown--IsExpanded}}
-      {{#if toolbar-overflow-menu-example--control}}
-        {{#> overflow-menu-control overflow-menu-button--aria-label="Overflow menu" overflow-menu-button--aria-expanded="true"}}
-          {{#unless toolbar-overflow-menu-example--content}}
-            {{#> overflow-menu-dropdown-item}}
-              Primary
-            {{/overflow-menu-dropdown-item}}
-            {{#> overflow-menu-dropdown-item}}
-              Secondary
-            {{/overflow-menu-dropdown-item}}
-          {{/unless}}
-          {{#> overflow-menu-dropdown-item}}
-            Tertiary
-          {{/overflow-menu-dropdown-item}}
-        {{/overflow-menu-control}}
-      {{/if}}
-    {{else}}
-      {{#if toolbar-overflow-menu-example--control}}
-        {{#> overflow-menu-control overflow-menu-button--aria-label="Overflow menu" overflow-menu-button--aria-expanded="false"}}
-          {{#unless toolbar-overflow-menu-example--content}}
-            {{#> overflow-menu-dropdown-item}}
-              Primary
-            {{/overflow-menu-dropdown-item}}
-            {{#> overflow-menu-dropdown-item}}
-              Secondary
-            {{/overflow-menu-dropdown-item}}
-          {{/unless}}
-          {{#> overflow-menu-dropdown-item}}
-            Tertiary
-          {{/overflow-menu-dropdown-item}}
-        {{/overflow-menu-control}}
-      {{/if}}
+
+    {{#if toolbar-overflow-menu-example--control}}
+      {{#> overflow-menu-control menu-toggle--aria-label="Additional options toggle"}}
+        {{> menu-toggle menu-toggle--HasKebab=true menu-toggle--IsPlain=true menu-toggle--id=(dasherize overflow-menu--id 'toggle')}}
+      {{/overflow-menu-control}}
     {{/if}}
   {{/overflow-menu}}
 {{/toolbar-item}}
