--- a/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
+++ b/src/patternfly/demos/Tabs/tabs--table-overflow-menu.hbs
@@ -1,15 +1,5 @@
-{{#> overflow-menu dropdown-menu--modifier="pf-m-align-right" overflow-menu--id=tabs--table-overflow-menu--id}}
-  {{#if dropdown--IsExpanded}}
-    {{#> overflow-menu-control overflow-menu-button--aria-label="Dropdown for tabs table" overflow-menu-button--aria-expanded="true"}}
-      {{#> overflow-menu-dropdown-item}}
-        Action Link
-      {{/overflow-menu-dropdown-item}}
-    {{/overflow-menu-control}}
-  {{else}}
-    {{#> overflow-menu-control overflow-menu-button--aria-label="Dropdown for tabs table" overflow-menu-button--aria-expanded="false"}}
-      {{#> overflow-menu-dropdown-item}}
-        Action Link
-      {{/overflow-menu-dropdown-item}}
-    {{/overflow-menu-control}}
-  {{/if}}
+{{#> overflow-menu overflow-menu--id=tabs--table-overflow-menu--id}}
+  {{#> overflow-menu-control overflow-menu-button--aria-label="Menu for tabs table"}}
+    {{> menu-toggle menu-toggle--IsPlain=true menu-toggle--HasKebab=true menu-toggle--id=(dasherize overflow-menu--id 'toggle')}}
+  {{/overflow-menu-control}}
 {{/overflow-menu}}
