fix(badge): remove :disabled and pointer-events, fix examples

--- a/src/patternfly/components/Badge/badge.hbs
+++ b/src/patternfly/components/Badge/badge.hbs
@@ -1,5 +1,9 @@
 <span class="{{pfv}}badge
-  {{#if badge--IsUnread}}pf-m-unread {{/if}}
+  {{#if badge--IsUnread}}
+    pf-m-unread 
+  {{else}}
+    pf-m-read 
+  {{/if}}
   {{#if badge--IsDisabled}}pf-m-disabled {{/if}}
   {{#if badge--modifier}} {{badge--modifier}}{{/if}}"
   {{#if badge--attribute}}
