--- a/src/patternfly/base/tokens/tokens-charts-dark.scss
+++ b/src/patternfly/base/tokens/tokens-charts-dark.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Thu, 16 May 2024 15:08:07 GMT
+// Generated on Wed, 22 May 2024 20:26:40 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--chart--global--stroke-line-join: round;
@@ -22,7 +22,7 @@
   --pf-t--chart--global--BorderWidth--lg: 8;
   --pf-t--chart--global--BorderWidth--sm: 2;
   --pf-t--chart--global--BorderWidth--xs: 1;
-  --pf-t--chart--global--label--fill: var(--pf-t--color--gray--90);
+  --pf-t--chart--global--label--fill: var(--pf-t--color--white);
   --pf-t--chart--global--danger--color--100: var(--pf-t--color--red-orange--50);
   --pf-t--chart--global--success--color--100: var(--pf-t--color--blue--30);
   --pf-t--chart--global--warning--color--200: var(--pf-t--color--yellow--30);
