--- a/src/patternfly/components/Table/table-tbody.hbs
+++ b/src/patternfly/components/Table/table-tbody.hbs
@@ -1,7 +1,4 @@
-{{#>
-  config
-  IsBody=true
-}}
+{{#> config IsTbody=true}}
 
 <tbody class="{{pfv}}table__tbody
   {{#if table-tbody--IsClickable}} pf-m-clickable{{/if}}
