--- a/src/patternfly/components/Table/table-thead.hbs
+++ b/src/patternfly/components/Table/table-thead.hbs
@@ -1,7 +1,4 @@
-{{#>
-  config
-  IsThead=true
-}}
+{{#> config IsThead=true}}
 
 <thead class="{{pfv}}table__thead
   {{#if table-thead--modifier}}{{table-thead--modifier}}{{/if}}{{#if table-thead--IsNested}} pf-m-nested-column-header{{/if}}"
