--- a/src/patternfly/patternfly-charts.scss
+++ b/src/patternfly/patternfly-charts.scss
@@ -28,59 +28,66 @@ $chart: #{$pf-prefix} + 'chart';
   // Chart colors
   // blue
   --#{$chart}-color-blue-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-blue-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-blue-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-blue-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-blue-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-blue-200: var(--pf-t--chart--color--blue--200);
+  --#{$chart}-color-blue-300: var(--pf-t--chart--color--blue--300);
+  --#{$chart}-color-blue-400: var(--pf-t--chart--color--blue--400);
+  --#{$chart}-color-blue-500: var(--pf-t--chart--color--blue--500);
 
   // green
-  --#{$chart}-color-green-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-green-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-green-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-green-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-green-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-green-100: var(--pf-t--chart--color--green--100);
+  --#{$chart}-color-green-200: var(--pf-t--chart--color--green--200);
+  --#{$chart}-color-green-300: var(--pf-t--chart--color--green--300);
+  --#{$chart}-color-green-400: var(--pf-t--chart--color--green--400);
+  --#{$chart}-color-green-500: var(--pf-t--chart--color--green--500);
 
   // cyan
-  --#{$chart}-color-cyan-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-cyan-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-cyan-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-cyan-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-cyan-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-cyan-100: var(--pf-t--chart--color--teal--100);
+  --#{$chart}-color-cyan-200: var(--pf-t--chart--color--teal--200);
+  --#{$chart}-color-cyan-300: var(--pf-t--chart--color--teal--300);
+  --#{$chart}-color-cyan-400: var(--pf-t--chart--color--teal--400);
+  --#{$chart}-color-cyan-500: var(--pf-t--chart--color--teal--500);
 
   // purple
-  --#{$chart}-color-purple-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-purple-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-purple-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-purple-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-purple-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-purple-100: var(--pf-t--chart--color--purple--100);
+  --#{$chart}-color-purple-200: var(--pf-t--chart--color--purple--200);
+  --#{$chart}-color-purple-300: var(--pf-t--chart--color--purple--300);
+  --#{$chart}-color-purple-400: var(--pf-t--chart--color--purple--400);
+  --#{$chart}-color-purple-500: var(--pf-t--chart--color--purple--500);
 
   // gold
-  --#{$chart}-color-gold-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-gold-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-gold-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-gold-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-gold-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-gold-100: var(--pf-t--chart--color--yellow--100);
+  --#{$chart}-color-gold-200: var(--pf-t--chart--color--yellow--200);
+  --#{$chart}-color-gold-300: var(--pf-t--chart--color--yellow--300);
+  --#{$chart}-color-gold-400: var(--pf-t--chart--color--yellow--400);
+  --#{$chart}-color-gold-500: var(--pf-t--chart--color--yellow--500);
 
   // orange
-  --#{$chart}-color-orange-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-orange-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-orange-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-orange-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-orange-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-orange-100: var(--pf-t--chart--color--orange--100);
+  --#{$chart}-color-orange-200: var(--pf-t--chart--color--orange--200);
+  --#{$chart}-color-orange-300: var(--pf-t--chart--color--orange--300);
+  --#{$chart}-color-orange-400: var(--pf-t--chart--color--orange--400);
+  --#{$chart}-color-orange-500: var(--pf-t--chart--color--orange--500);
 
   // red
-  --#{$chart}-color-red-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-red-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-red-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-red-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-red-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-red-100: var(--pf-t--chart--color--red--100);
+  --#{$chart}-color-red-200: var(--pf-t--chart--color--red--200);
+  --#{$chart}-color-red-300: var(--pf-t--chart--color--red--300);
+  --#{$chart}-color-red-400: var(--pf-t--chart--color--red--400);
+  --#{$chart}-color-red-500: var(--pf-t--chart--color--red--500);
 
   // black
-  --#{$chart}-color-black-100: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-black-200: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-black-300: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-black-400: var(--pf-t--chart--color--blue--100);
-  --#{$chart}-color-black-500: var(--pf-t--chart--color--blue--100);
+  --#{$chart}-color-black-100: var(--pf-t--chart--color--black--100);
+  --#{$chart}-color-black-200: var(--pf-t--chart--color--black--200);
+  --#{$chart}-color-black-300: var(--pf-t--chart--color--black--300);
+  --#{$chart}-color-black-400: var(--pf-t--chart--color--black--400);
+  --#{$chart}-color-black-500: var(--pf-t--chart--color--black--500);
+
+  // red-orange
+  --#{$chart}-color-red-orange-100: var(--pf-t--chart--color--red-orange--100);
+  --#{$chart}-color-red-orange-200: var(--pf-t--chart--color--red-orange--200);
+  --#{$chart}-color-red-orange-300: var(--pf-t--chart--color--red-orange--300);
+  --#{$chart}-color-red-orange-400: var(--pf-t--chart--color--red-orange--400);
+  --#{$chart}-color-red-orange-500: var(--pf-t--chart--color--red-orange--500);
 
   // typography
   --#{$chart}-global--FontSize--xs: var(--pf-t--chart--global--FontSize--xs);
@@ -327,11 +334,11 @@ $chart: #{$pf-prefix} + 'chart';
   --#{$chart}-theme--blue--ColorScale--500: var(--pf-t--chart--theme--colorscales--blue--colorscale--500);
 
   // cyan
-  --#{$chart}-theme--cyan--ColorScale--100: var(--pf-t--chart--theme--colorscales--cyan--colorscale--100);
-  --#{$chart}-theme--cyan--ColorScale--200: var(--pf-t--chart--theme--colorscales--cyan--colorscale--200);
-  --#{$chart}-theme--cyan--ColorScale--300: var(--pf-t--chart--theme--colorscales--cyan--colorscale--300);
-  --#{$chart}-theme--cyan--ColorScale--400: var(--pf-t--chart--theme--colorscales--cyan--colorscale--400);
-  --#{$chart}-theme--cyan--ColorScale--500: var(--pf-t--chart--theme--colorscales--cyan--colorscale--500);
+  --#{$chart}-theme--cyan--ColorScale--100: var(--pf-t--chart--theme--colorscales--teal--colorscale--100);
+  --#{$chart}-theme--cyan--ColorScale--200: var(--pf-t--chart--theme--colorscales--teal--colorscale--200);
+  --#{$chart}-theme--cyan--ColorScale--300: var(--pf-t--chart--theme--colorscales--teal--colorscale--300);
+  --#{$chart}-theme--cyan--ColorScale--400: var(--pf-t--chart--theme--colorscales--teal--colorscale--400);
+  --#{$chart}-theme--cyan--ColorScale--500: var(--pf-t--chart--theme--colorscales--teal--colorscale--500);
 
   // gold
   --#{$chart}-theme--gold--ColorScale--100: var(--pf-t--chart--theme--colorscales--yellow--colorscale--100);
@@ -340,7 +347,7 @@ $chart: #{$pf-prefix} + 'chart';
   --#{$chart}-theme--gold--ColorScale--400: var(--pf-t--chart--theme--colorscales--yellow--colorscale--400);
   --#{$chart}-theme--gold--ColorScale--500: var(--pf-t--chart--theme--colorscales--yellow--colorscale--500);
 
-    // gray
+  // gray
   --#{$chart}-theme--gray--ColorScale--100: var(--pf-t--chart--theme--colorscales--gray--colorscale--100);
   --#{$chart}-theme--gray--ColorScale--200: var(--pf-t--chart--theme--colorscales--gray--colorscale--200);
   --#{$chart}-theme--gray--ColorScale--300: var(--pf-t--chart--theme--colorscales--gray--colorscale--300);
