fix(nav): add support for icon, text

--- a/src/patternfly/components/Nav/nav-link-text.hbs
+++ b/src/patternfly/components/Nav/nav-link-text.hbs
@@ -2,8 +2,8 @@
   {{#if nav-link-text--attribute}}
     {{{nav-link-text--attribute}}}
   {{/if}}>
-  {{#if nav-link-text--text}}
-    {{{nav-link-text--text}}}
+  {{#if nav-link--text}}
+    {{{nav-link--text}}}
   {{else if @partial-block}}
     {{> @partial-block}}
   {{/if}}
