fix(tokens): rename file and add no-motion modifier

--- a/src/patternfly/base/patternfly-variables.scss
+++ b/src/patternfly/base/patternfly-variables.scss
@@ -1,12 +1,12 @@
 @use '../sass-utilities' as *;
-@use "./tokens/tokens-font" as font;
+@use "./tokens/tokens-local" as local;
 @use "./tokens/tokens-palette" as palette;
 @use "./tokens/tokens-default" as default;
 @use "./tokens/tokens-dark" as dark;
 
 :where(:root) {
   @include pf-v6-set-inverse(false);
-  @include font.pf-v6-tokens;
+  @include local.pf-v6-tokens;
   @include palette.pf-v6-tokens;
   @include default.pf-v6-tokens;
 }
