--- a/src/patternfly/base/tokens/_index.scss
+++ b/src/patternfly/base/tokens/_index.scss
@@ -1,5 +1,5 @@
 @forward './workspace-overrides';
-@forward './tokens-font';
+@forward './tokens-local';
 @forward './tokens-palette';
 @forward './tokens-default';
 @forward './tokens-dark';
